Added tabs to frontend

--- a/RA_frontend/index.html
+++ b/RA_frontend/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Medical Image Analyzer</title>
+    <title>RA Detection System - AI-Powered Rheumatoid Arthritis Analysis</title>
+    <meta name="description" content="Advanced AI-powered rheumatoid arthritis stage detection from X-ray images using deep learning">
+    <meta property="og:title" content="RA Detection System">
+    <meta property="og:description" content="AI-powered rheumatoid arthritis stage detection">
     <meta property="og:image" content="https://bolt.new/static/og_default.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
-</head>
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
