--- a/RA_frontend/index.html
+++ b/RA_frontend/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RA Detection System - AI-Powered Rheumatoid Arthritis Analysis</title>
-    <meta name="description" content="Advanced AI-powered rheumatoid arthritis stage detection from X-ray images using deep learning">
-    <meta property="og:title" content="RA Detection System">
-    <meta property="og:description" content="AI-powered rheumatoid arthritis stage detection">
+    <title>Osteoarthritis Knee X-ray Classifier - AI-Powered KL Grading</title>
+    <meta name="description" content="AI-powered osteoarthritis Kellgren-Lawrence grading for knee X-rays using deep learning">
+    <meta property="og:title" content="Osteoarthritis Knee X-ray Classifier">
+    <meta property="og:description" content="AI-powered osteoarthritis (KL) grading for knee X-rays">
     <meta property="og:image" content="https://bolt.new/static/og_default.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
