Modified the project and app title and name to RA

--- a/RA_frontend/index.html
+++ b/RA_frontend/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Osteoarthritis Knee X-ray Classifier - AI-Powered KL Grading</title>
-    <meta name="description" content="AI-powered osteoarthritis Kellgren-Lawrence grading for knee X-rays using deep learning">
-    <meta property="og:title" content="Osteoarthritis Knee X-ray Classifier">
+    <meta name="description" content="AI-powered Rheumatoid Arthritis X-ray Classifier using deep learning">
+    <meta property="og:title" content="Rheumatoid Arthritis X-ray Classifier">
     <meta property="og:description" content="AI-powered osteoarthritis (KL) grading for knee X-rays">
     <meta property="og:image" content="https://bolt.new/static/og_default.png">
     <meta name="twitter:card" content="summary_large_image">
